{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 489,
  "lineage": "a8f020b5-c3b7-94c3-c14a-4611c947548c",
  "resources": [
    {
      "mode": "managed",
      "type": "kubernetes_namespace_v1",
      "name": "istio_system",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "istio-system",
            "metadata": [
              {
                "generation": 0,
                "name": "istio-system",
                "resource_version": "861",
                "uid": "c2677cf8-bd60-4299-9099-6631037e2b19"
              }
            ],
            "wait_for_default_service_account": false
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.eks.aws_cloudwatch_log_group.this",
            "module.eks.aws_eks_access_entry.this",
            "module.eks.aws_eks_access_policy_association.this",
            "module.eks.aws_eks_cluster.this",
            "module.eks.aws_iam_policy.cni_ipv6_policy",
            "module.eks.aws_iam_role.this",
            "module.eks.aws_iam_role_policy_attachment.this",
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.eks.aws_security_group_rule.cluster",
            "module.eks.aws_security_group_rule.node",
            "module.eks.data.aws_caller_identity.current",
            "module.eks.data.aws_iam_policy_document.assume_role_policy",
            "module.eks.data.aws_iam_policy_document.cni_ipv6_policy",
            "module.eks.data.aws_iam_session_context.current",
            "module.eks.data.aws_partition.current",
            "module.eks.module.kms.aws_kms_external_key.this",
            "module.eks.module.kms.aws_kms_key.this",
            "module.eks.module.kms.aws_kms_replica_external_key.this",
            "module.eks.module.kms.aws_kms_replica_key.this",
            "module.eks.module.kms.data.aws_caller_identity.current",
            "module.eks.module.kms.data.aws_iam_policy_document.this",
            "module.eks.module.kms.data.aws_partition.current",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:311141554934:security-group/sg-0e844e357c4a93433",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0e844e357c4a93433",
            "ingress": [],
            "name": "sesac-univ-cluster-cluster-20241117120726447500000007",
            "name_prefix": "sesac-univ-cluster-cluster-",
            "owner_id": "311141554934",
            "revoke_rules_on_delete": false,
            "tags": {
              "Blueprint": "sesac-univ-cluster",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "sesac-univ-cluster-cluster"
            },
            "tags_all": {
              "Blueprint": "sesac-univ-cluster",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "sesac-univ-cluster-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c79db8ddc85597e1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:311141554934:security-group/sg-0cca66a0fb2d836e2",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-0cca66a0fb2d836e2",
            "ingress": [],
            "name": "sesac-univ-cluster-node-20241117120726580300000008",
            "name_prefix": "sesac-univ-cluster-node-",
            "owner_id": "311141554934",
            "revoke_rules_on_delete": false,
            "tags": {
              "Blueprint": "sesac-univ-cluster",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "sesac-univ-cluster-node",
              "kubernetes.io/cluster/sesac-univ-cluster": "owned"
            },
            "tags_all": {
              "Blueprint": "sesac-univ-cluster",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "sesac-univ-cluster-node",
              "kubernetes.io/cluster/sesac-univ-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c79db8ddc85597e1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-3905121356",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e844e357c4a93433",
            "security_group_rule_id": "sgr-05b03f77380852761",
            "self": false,
            "source_security_group_id": "sg-0cca66a0fb2d836e2",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-164547443",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0cca66a0fb2d836e2",
            "security_group_rule_id": "sgr-06af43cbd05e6bdab",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_15012",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to nodes ports/protocols",
            "from_port": 15012,
            "id": "sgrule-1475466758",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0cca66a0fb2d836e2",
            "security_group_rule_id": "sgr-0fbd03ec1e36dc2b4",
            "self": false,
            "source_security_group_id": "sg-0e844e357c4a93433",
            "timeouts": null,
            "to_port": 15012,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_15017",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API - Istio Webhook namespace.sidecar-injector.istio.io",
            "from_port": 15017,
            "id": "sgrule-2996684689",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0cca66a0fb2d836e2",
            "security_group_rule_id": "sgr-07cb7666bf3d7585c",
            "self": false,
            "source_security_group_id": "sg-0e844e357c4a93433",
            "timeouts": null,
            "to_port": 15017,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-2989641553",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0cca66a0fb2d836e2",
            "security_group_rule_id": "sgr-074ab3e95709fc6c7",
            "self": false,
            "source_security_group_id": "sg-0e844e357c4a93433",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-1491888979",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0cca66a0fb2d836e2",
            "security_group_rule_id": "sgr-0247d93cb377b0e69",
            "self": false,
            "source_security_group_id": "sg-0e844e357c4a93433",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-2444102853",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0cca66a0fb2d836e2",
            "security_group_rule_id": "sgr-01a8def2c9ac25cf2",
            "self": false,
            "source_security_group_id": "sg-0e844e357c4a93433",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-2196910308",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0cca66a0fb2d836e2",
            "security_group_rule_id": "sgr-06313933abcdb2a8d",
            "self": false,
            "source_security_group_id": "sg-0e844e357c4a93433",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-3864199983",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0cca66a0fb2d836e2",
            "security_group_rule_id": "sgr-0a42fe15d5aa03a8f",
            "self": false,
            "source_security_group_id": "sg-0e844e357c4a93433",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-3988770896",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0cca66a0fb2d836e2",
            "security_group_rule_id": "sgr-0ce531b3dd71e0058",
            "self": false,
            "source_security_group_id": "sg-0e844e357c4a93433",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-2322835491",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0cca66a0fb2d836e2",
            "security_group_rule_id": "sgr-0f6d3ac43be8f5356",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-2364203877",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0cca66a0fb2d836e2",
            "security_group_rule_id": "sgr-05acd0006769ae076",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-682967178",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0cca66a0fb2d836e2",
            "security_group_rule_id": "sgr-0ae03769c92edbbd9",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:311141554934:network-acl/acl-06765820c4111823f",
            "default_network_acl_id": "acl-06765820c4111823f",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-06765820c4111823f",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "311141554934",
            "subnet_ids": [
              "subnet-08d95b5917ff1b6f0",
              "subnet-098ed88ea35dbde89",
              "subnet-0c90b4915c4554c5a",
              "subnet-0d0349b064dae2044",
              "subnet-0de54a0f61a044bff",
              "subnet-0e521e5661d0c9d36"
            ],
            "tags": {
              "Blueprint": "sesac-univ-cluster",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "sesac-univ-cluster-default"
            },
            "tags_all": {
              "Blueprint": "sesac-univ-cluster",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "sesac-univ-cluster-default"
            },
            "vpc_id": "vpc-0c79db8ddc85597e1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:311141554934:route-table/rtb-0ce6dba5612775694",
            "default_route_table_id": "rtb-0ce6dba5612775694",
            "id": "rtb-0ce6dba5612775694",
            "owner_id": "311141554934",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Blueprint": "sesac-univ-cluster",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "sesac-univ-cluster-default"
            },
            "tags_all": {
              "Blueprint": "sesac-univ-cluster",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "sesac-univ-cluster-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0c79db8ddc85597e1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:311141554934:security-group/sg-06dfe3f0dadc0076c",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-06dfe3f0dadc0076c",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "311141554934",
            "revoke_rules_on_delete": false,
            "tags": {
              "Blueprint": "sesac-univ-cluster",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "sesac-univ-cluster-default"
            },
            "tags_all": {
              "Blueprint": "sesac-univ-cluster",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "sesac-univ-cluster-default"
            },
            "vpc_id": "vpc-0c79db8ddc85597e1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03c1d35a9448271f8",
            "arn": "arn:aws:ec2:ap-northeast-3:311141554934:elastic-ip/eipalloc-03c1d35a9448271f8",
            "domain": "vpc",
            "id": "eipalloc-03c1d35a9448271f8",
            "network_border_group": "ap-northeast-3",
            "public_dns": "ec2-15-168-224-127.ap-northeast-3.compute.amazonaws.com",
            "public_ip": "15.168.224.127",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Blueprint": "sesac-univ-cluster",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "sesac-univ-cluster-ap-northeast-3a"
            },
            "tags_all": {
              "Blueprint": "sesac-univ-cluster",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "sesac-univ-cluster-ap-northeast-3a"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:311141554934:internet-gateway/igw-0ce0474d8d448ce1f",
            "id": "igw-0ce0474d8d448ce1f",
            "owner_id": "311141554934",
            "tags": {
              "Blueprint": "sesac-univ-cluster",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "sesac-univ-cluster"
            },
            "tags_all": {
              "Blueprint": "sesac-univ-cluster",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "sesac-univ-cluster"
            },
            "vpc_id": "vpc-0c79db8ddc85597e1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03c1d35a9448271f8",
            "association_id": "eipassoc-07a5880520c8200bd",
            "connectivity_type": "public",
            "id": "nat-0f342117ad80a2e57",
            "network_interface_id": "eni-08209d2e5b19d0433",
            "private_ip": "10.0.48.109",
            "public_ip": "15.168.224.127",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08d95b5917ff1b6f0",
            "tags": {
              "Blueprint": "sesac-univ-cluster",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "sesac-univ-cluster-ap-northeast-3a"
            },
            "tags_all": {
              "Blueprint": "sesac-univ-cluster",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "sesac-univ-cluster-ap-northeast-3a"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-03cc636351092864e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0f342117ad80a2e57",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03cc636351092864e",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ce0474d8d448ce1f",
            "id": "r-rtb-053e4a0d1acc466c91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-053e4a0d1acc466c9",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:311141554934:route-table/rtb-03cc636351092864e",
            "id": "rtb-03cc636351092864e",
            "owner_id": "311141554934",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Blueprint": "sesac-univ-cluster",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "sesac-univ-cluster-private"
            },
            "tags_all": {
              "Blueprint": "sesac-univ-cluster",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "sesac-univ-cluster-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c79db8ddc85597e1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:311141554934:route-table/rtb-053e4a0d1acc466c9",
            "id": "rtb-053e4a0d1acc466c9",
            "owner_id": "311141554934",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Blueprint": "sesac-univ-cluster",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "sesac-univ-cluster-public"
            },
            "tags_all": {
              "Blueprint": "sesac-univ-cluster",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "sesac-univ-cluster-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c79db8ddc85597e1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-065452d401c6f6b85",
            "route_table_id": "rtb-03cc636351092864e",
            "subnet_id": "subnet-0c90b4915c4554c5a"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-083d2c87c73bdda8c",
            "route_table_id": "rtb-03cc636351092864e",
            "subnet_id": "subnet-098ed88ea35dbde89"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d13369aba9e8e2a3",
            "route_table_id": "rtb-03cc636351092864e",
            "subnet_id": "subnet-0e521e5661d0c9d36"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0470b72404ca0b5ea",
            "route_table_id": "rtb-053e4a0d1acc466c9",
            "subnet_id": "subnet-08d95b5917ff1b6f0"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ced611f834a907f6",
            "route_table_id": "rtb-053e4a0d1acc466c9",
            "subnet_id": "subnet-0d0349b064dae2044"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-026c9df463b206800",
            "route_table_id": "rtb-053e4a0d1acc466c9",
            "subnet_id": "subnet-0de54a0f61a044bff"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:311141554934:subnet/subnet-0c90b4915c4554c5a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-3a",
            "availability_zone_id": "apne3-az3",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c90b4915c4554c5a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "311141554934",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "sesac-univ-cluster",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "sesac-univ-cluster-private-ap-northeast-3a",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Blueprint": "sesac-univ-cluster",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "sesac-univ-cluster-private-ap-northeast-3a",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0c79db8ddc85597e1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:311141554934:subnet/subnet-098ed88ea35dbde89",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-3b",
            "availability_zone_id": "apne3-az1",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-098ed88ea35dbde89",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "311141554934",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "sesac-univ-cluster",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "sesac-univ-cluster-private-ap-northeast-3b",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Blueprint": "sesac-univ-cluster",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "sesac-univ-cluster-private-ap-northeast-3b",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0c79db8ddc85597e1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:311141554934:subnet/subnet-0e521e5661d0c9d36",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-3c",
            "availability_zone_id": "apne3-az2",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e521e5661d0c9d36",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "311141554934",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "sesac-univ-cluster",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "sesac-univ-cluster-private-ap-northeast-3c",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Blueprint": "sesac-univ-cluster",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "sesac-univ-cluster-private-ap-northeast-3c",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0c79db8ddc85597e1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:311141554934:subnet/subnet-08d95b5917ff1b6f0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-3a",
            "availability_zone_id": "apne3-az3",
            "cidr_block": "10.0.48.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08d95b5917ff1b6f0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "311141554934",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "sesac-univ-cluster",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "sesac-univ-cluster-public-ap-northeast-3a",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Blueprint": "sesac-univ-cluster",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "sesac-univ-cluster-public-ap-northeast-3a",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0c79db8ddc85597e1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:311141554934:subnet/subnet-0d0349b064dae2044",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-3b",
            "availability_zone_id": "apne3-az1",
            "cidr_block": "10.0.49.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d0349b064dae2044",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "311141554934",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "sesac-univ-cluster",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "sesac-univ-cluster-public-ap-northeast-3b",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Blueprint": "sesac-univ-cluster",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "sesac-univ-cluster-public-ap-northeast-3b",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0c79db8ddc85597e1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:311141554934:subnet/subnet-0de54a0f61a044bff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-3c",
            "availability_zone_id": "apne3-az2",
            "cidr_block": "10.0.50.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0de54a0f61a044bff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "311141554934",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "sesac-univ-cluster",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "sesac-univ-cluster-public-ap-northeast-3c",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Blueprint": "sesac-univ-cluster",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "sesac-univ-cluster-public-ap-northeast-3c",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0c79db8ddc85597e1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-3:311141554934:vpc/vpc-0c79db8ddc85597e1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06765820c4111823f",
            "default_route_table_id": "rtb-0ce6dba5612775694",
            "default_security_group_id": "sg-06dfe3f0dadc0076c",
            "dhcp_options_id": "dopt-082343e8f875fc4a0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c79db8ddc85597e1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ce6dba5612775694",
            "owner_id": "311141554934",
            "tags": {
              "Blueprint": "sesac-univ-cluster",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "sesac-univ-cluster"
            },
            "tags_all": {
              "Blueprint": "sesac-univ-cluster",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "sesac-univ-cluster"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}